--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador y Mapa de Proyectos</title>
+    <title>Buscador de Proyectos</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://unpkg.com/leaflet"></script> <!-- Añadir Leaflet -->
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -32,9 +31,9 @@
         </form>
     </div>
 
-    <!-- Sección del mapa -->
+    <!-- Sección del mapa con iframe -->
     <div id="mapContainer">
-        <div id="map"></div> <!-- Aquí se renderiza el mapa -->
+        <iframe id="mapFrame" src="mapa_proyectos_ciudades.html" width="100%" height="600px" style="border:none;"></iframe>
     </div>
 </body>
 </html>
